--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,7 @@
       
       <div class="row">
         <div class="col-sm-2 text-center">
-          <img src="bandmember.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+          <img src="images/bandmember.png" class="img-circle" height="65" width="65" alt="Avatar">
         </div>
         <div class="col-sm-10">
           <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
@@ -95,7 +95,7 @@
           <br>
         </div>
         <div class="col-sm-2 text-center">
-          <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+          <img src="images/bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
         </div>
         <div class="col-sm-10">
           <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
@@ -104,7 +104,7 @@
           <p><span class="badge">1</span> Comment:</p><br>
           <div class="row">
             <div class="col-sm-2 text-center">
-              <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+              <img src="images/bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
             </div>
             <div class="col-xs-10">
               <h4>Nested Bro <small>Sep 25, 2015, 8:28 PM</small></h4>
