--- a/html/index.html
+++ b/html/index.html
@@ -64,6 +64,7 @@
       <h5><span class="glyphicon glyphicon-time"></span> Post by Geerten, 2018.</h5>
       <h5><span class="label label-danger">Openshift</span> <span class="label label-primary">Voorbeeld</span></h5><br>
       <p>Over OpenShift.</p>
+      <p>Het gaat over containers, kubernetes en geautomatiseerde pipelines. Erg cool, ook voor een leek.</p>
       <br><br>
       
       <h4><small>RECENT POSTS</small></h4>
@@ -120,6 +121,7 @@
 
 <footer class="container-fluid">
   <p>Leest iemand dit echt?</p>
+  <p>Ja dit wordt gelezen!</p>
 </footer>
 
 </body>
