--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 <div class="container-fluid">
   <div class="row content">
     <div class="col-sm-3 sidenav">
-      <img src="images/hcslogo.png" width="100%"/>
+      <img src="images/logo_Logius.jpg" width="100%"/>
       <h4>Wander's Blog</h4>
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="#section1">Home</a></li>
