--- a/html/index.html
+++ b/html/index.html
@@ -13,13 +13,14 @@
     
     /* Set gray background color and 100% height */
     .sidenav {
-      background-color: #f1f1f1;
+      background-color: blue;
+      color: white;
       height: 100%;
     }
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: #555;
+      background-color: purple;
       color: white;
       padding: 15px;
     }
@@ -45,7 +46,7 @@
         <li class="active"><a href="#section1">Home</a></li>
         <li><a href="#section2">Ansible</a></li>
         <li><a href="#section3">OpenShift</a></li>
-        <li><a href="#section3">HCS Company</a></li>
+        <li><a href="#section3">Logius</a></li>
       </ul><br>
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search Blog..">
@@ -72,7 +73,7 @@
       <h2>Ansible is tof!</h2>
       <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
       <h5><span class="label label-success">Lorem</span></h5><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Ansible is een krachtige tool voor het beheer van IT infrastructuur. Prima om bijvoorbeeld een Openshift cluster repeteerbaaar mee uit te rollen over verschillende platformen.
       <hr>
 
       <h4>Leave a Comment:</h4>
@@ -120,7 +121,6 @@
 </div>
 
 <footer class="container-fluid">
-  <p>Leest iemand dit echt?</p>
   <p>Ja dit wordt gelezen!</p>
 </footer>
 
