--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,7 @@
     
     /* Set gray background color and 100% height */
     .sidenav {
-      background-color: blue;
-      color: white;
+      background-color: #f1f1f1;
       height: 100%;
     }
     
