--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,8 @@
     
     /* Set gray background color and 100% height */
     .sidenav {
-      background-color: #f1f1f1;
+      background-color: black;
+      color: white;
       height: 100%;
     }
     
