--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: purple;
+      background-color: grey;
       color: white;
       padding: 15px;
     }
@@ -65,7 +65,7 @@
       <h5><span class="glyphicon glyphicon-time"></span> Post by Geerten, 2018.</h5>
       <h5><span class="label label-danger">Openshift</span> <span class="label label-primary">Voorbeeld</span></h5><br>
       <p>Over OpenShift.</p>
-      <p>Het gaat over containers, kubernetes en geautomatiseerde pipelines. Erg cool, ook voor een leek.</p>
+      <p>Het gaat over containers, kubernetes en geautomatiseerde pipelines. Erg cool, ook voor een leek. Zoals we net hebben gezien is het vrij eenvoudig om een nieuwe container te maken met gewijzigde content en die meerdere keren uit te rollen.</p>
       <br><br>
       
       <h4><small>RECENT POSTS</small></h4>
@@ -121,7 +121,8 @@
 </div>
 
 <footer class="container-fluid">
-  <p>Ja dit wordt gelezen!</p>
+  <p>Ja dit wordt gelezen!
+  Met weer een ander achtergrondkleur.</p>
 </footer>
 
 </body>
