--- a/html/index.html
+++ b/html/index.html
@@ -13,14 +13,14 @@
     
     /* Set gray background color and 100% height */
     .sidenav {
-      background-color: black;
-      color: white;
+      background-color: pink;
+      color: black;
       height: 100%;
     }
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: grey;
+      background-color: black;
       color: white;
       padding: 15px;
     }
