--- a/html/index.html
+++ b/html/index.html
@@ -9,18 +9,25 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+   
     .row.content {height: 1500px}
+   
+    /* set background and text colors */
+    body {
+      backgroud-color: dimgrey;
+      color: white;
+    }
     
     /* Set gray background color and 100% height */
     .sidenav {
-      background-color: pink;
-      color: black;
+      background-color: dimgrey;
+      color: white;
       height: 100%;
     }
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: black;
+      background-color: dimgrey;
       color: white;
       padding: 15px;
     }
