--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
    
     /* set background and text colors */
     body {
-      backgroud-color: dimgrey;
+      background-color: dimgrey;
       color: white;
     }
     
