--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
    
     /* set background and text colors */
     body {
-      background-color: dimgrey;
+      background-color: grey;
       color: white;
     }
     
